[package]
name = "alnopm"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4.21"
tar = "0.4"

[dependencies.bzip2]
version = "0.4"
optional = true

[dependencies.flate2]
version = "1.0"
optional = true

[dependencies.lz4_flex]
version = "0.11"
optional = true

[dependencies.lzma-rs]
version = "0.3"
optional = true

[dependencies.pkgbuild]
version = "0.1"
git = "https://github.com/7Ji/pkgbuild-rs"
default-features = false
features = []

[dependencies.zstd]
version = "0.13.1"
optional = true

[features]
default = ["db_bz2", "db_gz", "db_lrz", "db_lz", "db_lz4", "db_lzo", "db_xz", "db_Z", "db_zst"]
db_bz2 = ["bzip2"]
db_gz = ["flate2"]
db_lrz = []
db_lz = ["lzma-rs"]
db_lz4 = ["lz4_flex"]
db_lzo = []
db_xz = ["lzma-rs"]
db_Z = []
db_zst = ["zstd"]

[[example]]
name = "dump"
path = "examples/dump.rs"

[[example]]
name = "hashstat"
path = "examples/hashstat.rs"

[[example]]
name = "provides"
path = "examples/provides.rs"
